2017-09-01 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-784

	* src/m_fos.cc (iyHybrid):
	Removed a leftover debugging write out.

	* src/m_rt4.cc (RT4Calc):
	Set dummy surface_skin_t when initializing.

	* src/cloudbox.cc (check_pndsum):
	Downgrade outlevel to 3.

	* controlfiles/artscomponents/hybridscat/TestHybrid.arts:
	Set iy_main_agenda for yCalc using RT4 explicitly here (not rely on
	setting from an INCLUDE).

2017-08-31 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-783

	There are only two hard things in Computer Science: cache invalidation
	and REnaming things.

	* controlfiles/artscomponents/oem/TestOEM.arts: Updated function names changed
	in previous commit.

2017-08-31 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-782

	There are only two hard things in Computer Science: cache invalidation
	and naming things.

	* src/m_oem.cc: Changed abbreviation ml to lm in variables related to
	Levenberg-Marquardt method.

	* src/m_retrieval.cc: Renamed Covmat1D to covmat1D, Covmat1DMarkov
	to covmat1DMarkov, covmat_blockSetDiagonal to covmatSetDiagonal to get some
	consistency somewhere.

	* src/methods.cc: Updated method and argument names.

	* src/workspace.cc: Updated name of lm_ga_history WSV

2017-08-31 Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-781
	
	* src/rte.{cc,h}:  Added some stepwise functions to begin splitting
	of the *pmat_and_tmat giant function.
	
	* src/propagationmatrix_h:  Added const return of Matrix because
	of compiler complaints

2017-08-30 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-780

	* controlfiles/artscomponents/transmission/TestTransmissionWithScat.arts,
	clearREFERENCE.xml, cloudyREFERENCE.xml,
	controlfiles/CMakeLists.txt:
	Added. Transmission test case with scattering particles. Also added to
	standard checks.

2017-08-30 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-779

	* controlfiles/CMakeLists.txt: